--- a/css/tideline.css
+++ b/css/tideline.css
@@ -2,45 +2,68 @@ svg {
   display: block;
   margin: 0 auto;
 }
-.axis path,
-.axis line {
+.d3-axis path,
+.d3-axis line {
   fill: none;
-  stroke: black;
   shape-rendering: crispEdges;
 }
-.axis text {
+.d3-axis text {
+  fill: #808080;
+}
+.d3-x.d3-axis path,
+.d3-x.d3-axis line {
+  stroke: #808080;
+}
+.d3-x.d3-axis text {
   font-family: sans-serif;
-  font-size: .5em;
+  font-size: 2vh;
+}
+.d3-y.d3-axis path,
+.d3-y.d3-axis line {
+  stroke: white;
+}
+.d3-y.d3-axis text {
+  font-family: sans-serif;
+  font-size: 2vh;
 }
 .d3-pool-label {
   font-family: sans-serif;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 16px;
-  fill: #4e4e4f;
-  baseline-shift: super;
+  font-size: 2.5vh;
+  fill: #808080;
+  baseline-shift: 30%;
 }
-.d3-rect-fill.darkest {
+.d3-rect-fill.d3-fill-darkest {
   fill: #dce4e7;
 }
-.d3-rect-fill.dark {
+.d3-rect-fill.d3-fill-dark {
   fill: #e3eaed;
 }
-.d3-rect-fill.light {
+.d3-rect-fill.d3-fill-light {
   fill: #f2f4f6;
 }
-.d3-rect-fill.lighter {
+.d3-rect-fill.d3-fill-lighter {
   fill: #e9eff1;
 }
-.d3-rect-fill.lightest {
+.d3-rect-fill.d3-fill-lightest {
   fill: #f8f9fa;
 }
-.cbg.low {
+.d3-rect-carbs {
+  fill: #ffd382;
+}
+.d3-rect-bolus {
+  fill: #79d0f2;
+}
+.d3-cbg.d3-bg-low,
+.d3-smbg.d3-bg-low {
   fill: #ff8b7c;
 }
-.cbg.target {
+.d3-cbg.d3-bg-target,
+.d3-smbg.d3-bg-target {
   fill: #9ad859;
 }
-.cbg.high {
+.d3-cbg.d3-bg-high,
+.d3-smbg.d3-bg-high {
   fill: #bb9ae7;
 }
