--- a/css/tideline.css
+++ b/css/tideline.css
@@ -15,22 +15,19 @@ svg {
   stroke: #808080;
 }
 .d3-x.d3-axis text {
-  font-family: sans-serif;
-  font-size: 2vh;
+  font-size: 14px;
 }
 .d3-y.d3-axis path,
 .d3-y.d3-axis line {
   stroke: white;
 }
 .d3-y.d3-axis text {
-  font-family: sans-serif;
-  font-size: 2vh;
+  font-size: 14px;
 }
 .d3-pool-label {
-  font-family: sans-serif;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 2.5vh;
+  font-size: 16px;
   fill: #808080;
   baseline-shift: 30%;
 }
