--- a/example/example.css
+++ b/example/example.css
@@ -1,11 +1,15 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 #tideline {
   background-color: white;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 #tideline #tidelineNav {
   background-color: #989897;
 }
 #tideline #tidelineNav .tidelineNavLabel {
-  font-size: 14px;
+  font-family: 'Open Sans';
+  font-size: 16px;
   font-weight: bold;
   color: white;
 }
