--- a/css/tideline.css
+++ b/css/tideline.css
@@ -52,6 +52,20 @@ svg {
 .d3-bolus.d3-rect-bolus {
   fill: #79d0f2;
 }
+.d3-bolus.d3-path-bolus {
+  stroke: #79d0f2;
+  fill: none;
+}
+.d3-bolus.d3-path-extended {
+  stroke: #79d0f2;
+}
+.d3-bolus.d3-path-extended-triangle {
+  stroke: #79d0f2;
+  fill: #79d0f2;
+}
+.d3-bolus.d3-rect-recommended {
+  fill: #bcecfa;
+}
 .d3-cbg.d3-bg-low,
 .d3-smbg.d3-bg-low {
   fill: #ff8b7c;
@@ -63,4 +77,9 @@ svg {
 .d3-cbg.d3-bg-high,
 .d3-smbg.d3-bg-high {
   fill: #bb9ae7;
+}
+.d3-cbg.d3-smbg-image,
+.d3-smbg.d3-smbg-image {
+  width: 16;
+  height: 16;
 }
