--- a/example/example.css
+++ b/example/example.css
@@ -1,32 +1,58 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+/* 
+ * == BSD2 LICENSE ==
+ * Copyright (c) 2014, Tidepool Project
+ * 
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the associated License, which is identical to the BSD 2-Clause
+ * License as published by the Open Source Initiative at opensource.org.
+ * 
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the License for more details.
+ * 
+ * You should have received a copy of the License along with this program; if
+ * not, you can obtain one from Tidepool Project at tidepool.org.
+ * == BSD2 LICENSE ==
+ */
 #tideline {
   background-color: white;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
-#tideline #tidelineNav {
+#tideline .one-day {
+  visibility: visible;
+}
+#tideline .two-week {
+  visibility: hidden;
+}
+#tideline .tidelineNav {
   background-color: #989897;
 }
-#tideline #tidelineNav .tidelineNavLabel {
+#tideline .tidelineNav .tidelineNavLabel {
   font-family: 'Open Sans';
   font-size: 16px;
-  font-weight: bold;
+  font-weight: normal;
   color: white;
 }
-#tideline #tidelineNav .tidelineNavLabel.inactive {
-  font-weight: normal;
+#tideline .tidelineNav .tidelineNavLabel.active {
+  font-weight: bold;
 }
-#tideline #tidelineNav .tidelineNavRightLabel {
+#tideline .tidelineNav .tidelineNavLabel a {
+  color: white;
+  text-decoration: none;
+}
+#tideline .tidelineNav .tidelineNavRightLabel {
   text-align: right !important;
 }
-#tideline #tidelineNav .tidelineSpacer {
+#tideline .tidelineNav .tidelineSpacer {
   display: inline-block;
   width: 8px;
 }
-#tideline #tidelineNav #tidelineLabel {
+#tideline .tidelineNav #tidelineLabel {
   text-align: center;
 }
-#tideline #tidelineNav #tidelineLabel img {
+#tideline .tidelineNav #tidelineLabel img {
   display: inline-block;
   vertical-align: middle;
   width: 32px;
