--- a/css/tideline.css
+++ b/css/tideline.css
@@ -14,22 +14,6 @@
  * not, you can obtain one from Tidepool Project at tidepool.org.
  * == BSD2 LICENSE ==
  */
-/* 
- * == BSD2 LICENSE ==
- * Copyright (c) 2014, Tidepool Project
- * 
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the associated License, which is identical to the BSD 2-Clause
- * License as published by the Open Source Initiative at opensource.org.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the License for more details.
- * 
- * You should have received a copy of the License along with this program; if
- * not, you can obtain one from Tidepool Project at tidepool.org.
- * == BSD2 LICENSE ==
- */
 svg {
   display: block;
   margin: 0 auto;
@@ -144,6 +128,14 @@ svg {
   font-size: 14px;
   font-weight: bold;
 }
+.d3-tooltip text.d3-tooltip-text.d3-carbs {
+  font-size: 14px;
+  font-weight: bold;
+}
+.d3-tooltip text.d3-tooltip-text.d3-bolus {
+  font-size: 14px;
+  font-weight: bold;
+}
 .d3-tooltip text.d3-tooltip-text.d3-basal {
   font-size: 14px;
   font-weight: bold;
@@ -154,6 +146,9 @@ svg {
 .d3-tooltip text.d3-tooltip-text tspan {
   font-weight: normal;
   dominant-baseline: central;
+}
+.d3-tooltip text.d3-tooltip-text tspan.d3-bolus {
+  font-size: 11px;
 }
 .d3-tooltip .d3-tooltip-rect {
   fill: #f8f9fa;
