--- a/example/example.css
+++ b/example/example.css
@@ -15,6 +15,38 @@
  * not, you can obtain one from Tidepool Project at tidepool.org.
  * == BSD2 LICENSE ==
  */
+/* 
+ * == BSD2 LICENSE ==
+ * Copyright (c) 2014, Tidepool Project
+ * 
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the associated License, which is identical to the BSD 2-Clause
+ * License as published by the Open Source Initiative at opensource.org.
+ * 
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the License for more details.
+ * 
+ * You should have received a copy of the License along with this program; if
+ * not, you can obtain one from Tidepool Project at tidepool.org.
+ * == BSD2 LICENSE ==
+ */
+/* 
+ * == BSD2 LICENSE ==
+ * Copyright (c) 2014, Tidepool Project
+ * 
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the associated License, which is identical to the BSD 2-Clause
+ * License as published by the Open Source Initiative at opensource.org.
+ * 
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the License for more details.
+ * 
+ * You should have received a copy of the License along with this program; if
+ * not, you can obtain one from Tidepool Project at tidepool.org.
+ * == BSD2 LICENSE ==
+ */
 svg {
   display: block;
   margin: 0 auto;
@@ -34,10 +66,19 @@ svg.hidden {
 .d3-axis text {
   font-size: 14px;
   fill: #989897;
-  text-transform: lowercase;
 }
 .d3-axis.d3-y text {
   fill: #808080;
+  text-transform: lowercase;
+}
+.d3-axis.d3-day-axis text {
+  font-size: 13px;
+}
+.d3-axis.d3-day-axis text.d3-weekend {
+  fill: #bac9d1;
+}
+.d3-axis.d3-day-axis line {
+  fill: #bac9d1;
 }
 .scroll line {
   stroke: #989897;
@@ -257,9 +298,6 @@ svg.hidden {
   font-weight: 700;
   src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('../fonts/opensans-bolditalic.woff') format('woff');
 }
-.container {
-  min-width: 960px;
-}
 #tideline {
   background-color: white;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -273,6 +311,11 @@ svg.hidden {
 }
 #tideline .tidelineNav {
   background-color: #989897;
+  width: 990px;
+}
+#tideline .tidelineNav .tidelineNavLabelWrapper {
+  min-width: 220px;
+  display: inline-block;
 }
 #tideline .tidelineNav .tidelineNavLabel {
   font-family: 'Open Sans';
@@ -304,5 +347,6 @@ svg.hidden {
 }
 #tidelineContainer {
   margin: 0 auto;
+  width: 990px;
   height: 590px;
 }
