--- a/example/example.css
+++ b/example/example.css
@@ -81,9 +81,14 @@ svg.hidden {
   fill: #bac9d1;
 }
 .scroll line {
-  stroke: #989897;
-  stroke-width: 1;
-  shape-rendering: crispEdges;
+  stroke: #f2f4f6;
+  stroke-linecap: round;
+}
+.scrollThumb {
+  fill: #989897;
+}
+#scrollNavInvisibleRect {
+  pointer-events: none;
 }
 .d3-pool-label {
   text-transform: uppercase;
@@ -131,6 +136,9 @@ svg.hidden {
 .d3-bolus.d3-path-extended {
   stroke: #79d0f2;
 }
+.d3-bolus.d3-path-extended.d3-unknown-delivery-split {
+  stroke-dasharray: 3,5;
+}
 .d3-bolus.d3-path-extended-triangle {
   stroke: #79d0f2;
   fill: #79d0f2;
@@ -155,8 +163,7 @@ svg.hidden {
 .d3-smbg-numbers.d3-text-smbg {
   pointer-events: none;
   fill: #808080;
-  font-size: 14px;
-  font-weight: bold;
+  font-size: 11px;
   text-anchor: middle;
   dominant-baseline: central;
 }
@@ -292,6 +299,18 @@ svg.hidden {
 .d3-stats.d3-insufficient-data tspan {
   fill: #cccccc !important;
 }
+.d3-settings-section {
+  display: inline-block;
+}
+.d3-settings-section .d3-settings-col {
+  display: inline-block;
+}
+.d3-settings-basal-schedule-label {
+  text-transform: capitalize;
+}
+.d3-settings-start-time {
+  text-transform: lowercase;
+}
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -316,55 +335,81 @@ svg.hidden {
   font-weight: 700;
   src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('../fonts/opensans-bolditalic.woff') format('woff');
 }
-#tideline {
+.vSpace {
+  width: 100vw;
+  height: 10px;
+}
+@media (max-width: 1024px) {
+  #tidelineMain {
+    width: 100%;
+    margin: 0 0;
+    padding: 0 10px;
+  }
+  .vSpace {
+    height: 44px;
+  }
+}
+#tidelineMain {
   background-color: white;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
-#tideline .one-day {
+#tidelineMain .one-day {
   visibility: visible;
 }
-#tideline .two-week {
+#tidelineMain .two-week {
   visibility: hidden;
 }
-#tideline .tidelineNav {
-  background-color: #989897;
-  width: 990px;
+#tidelineMain .row {
+  margin: 0 auto;
+  width: 980px;
 }
-#tideline .tidelineNav .tidelineNavLabelWrapper {
+#tidelineMain a {
+  color: white;
+  text-decoration: none;
+  line-height: 40px;
+  display: inline-block;
+  min-width: 100px;
+}
+#tidelineMain .tidelineNav {
+  background-color: #989897;
+  width: 980px;
+  height: 40px;
+}
+#tidelineMain .tidelineNav .tidelineNavLabelWrapper {
   min-width: 220px;
   display: inline-block;
 }
-#tideline .tidelineNav .tidelineNavLabel {
+#tidelineMain .tidelineNav .tidelineNavLabel {
   font-family: 'Open Sans';
   font-size: 16px;
   font-weight: normal;
   color: white;
 }
-#tideline .tidelineNav .tidelineNavLabel.active {
+#tidelineMain .tidelineNav .tidelineNavLabel.active {
   font-weight: bold;
 }
-#tideline .tidelineNav .tidelineNavLabel a {
-  color: white;
-  text-decoration: none;
-}
-#tideline .tidelineNav .tidelineNavRightLabel {
+#tidelineMain .tidelineNav .tidelineNavRightLabel {
   text-align: right !important;
 }
-#tideline .tidelineNav .tidelineSpacer {
-  display: inline-block;
-  width: 8px;
-}
-#tideline .tidelineNav #tidelineLabel {
+#tidelineMain .tidelineNav #tidelineLabel {
   text-align: center;
+  line-height: 40px;
 }
-#tideline .tidelineNav #tidelineLabel img {
+#tidelineMain .tidelineNav #tidelineLabel img {
   display: inline-block;
   vertical-align: middle;
   width: 32px;
 }
-#tidelineContainer {
+#tidelineOuterContainer {
   margin: 0 auto;
-  width: 990px;
+  width: 980px;
+  height: 600px;
+  padding: 5px 10px;
+}
+#tidelineOuterContainer #tidelineContainer {
+  margin: 0 auto;
+  width: 960px;
   height: 590px;
+  padding: 0;
 }
