added darker background to end of day pool

--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -34,7 +34,8 @@
 @two-week-weekend: #BAC9D1;
 
 // one-day view tideline background rectangle fill colors
-@fill-darkest: #DCE4E7;
+@fill-darker: #DCE4E7;
+@fill-darkest: #D3DBDD;
 @fill-dark: #E3EAED;
 @fill-lighter: #E9EFF1;
 @fill-light: #F2F4F6;
