--- a/css/tideline.less
+++ b/css/tideline.less
@@ -116,6 +116,9 @@ svg {
 
 // pool background rectangles
 .d3-rect-fill {
+  &.d3-fill-darker {
+    fill: @fill-darker;
+  }
   &.d3-fill-darkest {
     fill: @fill-darkest;
   }
