--- a/css/tideline-colors.less
+++ b/css/tideline-colors.less
@@ -42,9 +42,9 @@
 @fill-lightest: #F8F9FA;
 
 // blood glucose colors
-@bg-low: #FF8B7C;
-@bg-target: #9AD859;
-@bg-high: #BB9AE7;
+@bg-low: #FF7F70;
+@bg-target: #00CDA3;
+@bg-high: #C490EC;
 
 // carbs color
 @carbs: #FFD382;
